# vld

./: .gitignore  CMakeLists.txt  README.md  build.bat
src/: .clang-format  CMakeLists.txt  callstack.cpp  callstack.h  criticalsection.h  crtmfcpatch.h  dbghelpint.h  dllspatches.cpp  loaderlock.h  map.h  ntapi.cpp  ntapi.h  set.h  stdafx.h  tree.h  utility.cpp  utility.h  version.h  vld.cpp  vld.h  vld.ini  vld.rc  vld_def.h  vld_hooks.cpp  vldallocator.h  vldapi.cpp  vldheap.cpp  vldheap.h  vldint.h
src/default_config/: vld.ini
src/fmt/: fmt.cmake  posix.cpp  posix.hpp
src/moduleinfo/: moduleinfo.cmake  moduleinfo.cpp  moduleinfo.hpp
